[metadata]
name = logmerger
version = 0.10.0
description = A command-line utility to display multiple log files, merged by log timestamp
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    Source=https://github.com/ptmcg/logmerger
email = ptmcg.pm@gmail.com
author = Paul McGuire
author_email = ptmcg.pm@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: System :: Systems Administration
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
python_requires= >=3.9
install_requires =
    littletable
    rich
    typing-extensions>=4.12.0;python_version>="3.13"
    textual

include_package_data = True

[options.extras_require]
pcap =
    pyshark

[options.entry_points]
console_scripts =
    logmerger = logmerger.logmerger:main
